<resources>
    <string name="app_name">Soundboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_button">Add a New Button</string>
    <string name="action_edit_buttons">Edit Buttons</string>

    <string name="menu_new">New Board</string>
    <string name="menu_load">Load Board</string>
    <string name="menu_save">Save Board</string>
    <string name="menu_clear">Clear Board</string>

    <string name="recorder_record">Hold to Record</string>
    <string name="recorder_recording">Recording Sound!</string>
    <string name="recorder_play">Listen to Sound</string>
    <string name="recorder_done">Done</string>
    <string name="recorder_cancel">Cancel</string>
    <string name="recorder_use">Use Sound</string>

    <string name="button_title">Edit Button</string>
    <string name="button_name">Name: </string>
    <string name="button_color">Color: </string>
    <string name="button_sound">Sound: </string>
    <string name="button_change">Change Sound</string>
    <string name="button_browse">Browse File System</string>
    <string name="button_record">Record New Sound</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="default_board">Default Sound Board</string>

    <string name="save_hint_text">Enter Save File Name</string>
    <string name="settings_text">Settings</string>
    <string name="volume_text">Volume: </string>
    <string name="brightness_text">Brightness: </string>
    <string name="size_text">Button Size: </string>
    <string name="orientation_text">Lock Orientation: </string>

    <string name="color_picker">Select a Color!</string>
    <string name="button_color_select_text">Select a Color</string>

    <string name="record_help_text">Press and hold to record a sound</string>
    <string name="edit_filename">Edit file name here</string>
    <string name="edit_name">Give your button a name!</string>
    <string name="browse_files">Or browse existing files</string>
    <string name="sound_preview">Preview your sound here</string>
    <string name="edit_mode">Mode: Edit. Choose the button you wish to edit</string>
    <string name="play_mode">Mode: Play</string>
</resources>
