<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_text"
        android:id="@+id/settingsText"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/fab_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_text"
        android:id="@+id/text_volume"
        android:textSize="20sp"
        android:layout_below="@+id/settingsText"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/fab_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_text"
        android:id="@+id/text_button_size"
        android:textSize="20sp"
        android:layout_below="@+id/text_volume"
        android:paddingTop="5dp"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin"/>


</RelativeLayout>